# clive

./: .gitignore  .mcp.json  CLAUDE.md  DECISIONS.md  README.md  sonar-project.properties
.claude/agents/: access-security-agent.md  architect.md  experience-agent.md  infrastructure-agent.md  intelligence-agent.md  knowledge-agent.md  systems-agent.md
.github/workflows/: ansible.yml  ci.yml  deploy.yml  diag.yml  e2e.yml  rollback.yml  terraform.yml
docs/: clive-v1-test-plan.md  v0.10-prompts.md  v0.11-prompts.md  v0.8-prompts.md  v0.9-prompts.md  v1-roadmap.md
docs/decisions/: D-001-single-owner-system.md  D-002-no-technology-at-spec.md  D-003-event-bus-principle.md  D-004-alignment-layer-governs.md  D-005-personality-survives-reaper.md  D-006-confirmation-gate.md  D-007-no-fixed-business-model.md  D-008-decisions-living-document.md  D-009-build-model-a.md  D-010-standard-decision-protocol.md  D-011-one-ask-per-message.md  D-012-architect-owns-block-22.md  D-013-specialist-activation.md  D-014-bootstrap-agent.md  D-015-incremental-specialist-growth.md  D-016-parallel-build.md  D-017-block-13-16-first.md  D-018-agents-stateless.md  D-019-systems-infra-first.md  D-020-prompts-single-code-block.md  D-021-implementation-after-requirements.md  D-022-experimental-zone-isolation.md  D-023-single-orchestrator-instance.md  D-024-controlled-event-bridge.md  D-025-at-least-once-delivery.md  D-026-per-conversation-ordering.md  D-027-point-in-time-recovery.md  D-028-queue-overflow-backpressure.md  D-029-block-21-parameterised-iac.md  D-030-experimental-events-trust-class.md  D-031-retry-exponential-backoff.md  D-032-block-25-production-scoped.md  D-033-decisions-notion-source-of-truth.md  D-034-owner-sign-off-per-promotion.md  D-035-v01-query-only-single-surface.md  D-036-business-layer-out-of-v1.md  D-037-alignment-gate-rules-schema.md  D-038-d034-relaxation-locked.md  D-039-personality-document-encoding.md  D-040-build-vs-runtime-agents.md  (+122 more)
docs/runbooks/: bootstrap.md  day2-ops.md  manual-test-plan-v1.md  observability.md  terraform-bootstrap.md
docs/spec/: Block 1 - CLIVE Personality Document v0.1.md  Block 1 - CLIVE Personality Document v0.2.md  Block 12 - Context Window Policy.md  Block 13 - Central Orchestrator Requirements.md  Block 13 - Orchestrator Source Code Specification.md  Block 14-15 - Ingestion and Processing Requirements.md  Block 16 - Storage Requirements.md  Block 19 - Config Admin Current State.md  Block 21 - Evolution Engine Requirements.md  Block 22 - Query-Time Alignment Rules.md  Block 3 - UX Design v0.11.md  (+8 more)
src/dashboard/: Dockerfile  pyproject.toml
src/dashboard/clive_dashboard/: __init__.py  api.py  auth.py  main.py  push.py
src/dashboard/clive_dashboard/static/: index.html
src/dashboard/tests/: test_api_and_push.py  test_auth_extended.py  test_v11_dashboard_api.py  test_v11_dashboard_auth.py
src/orchestrator/: Dockerfile  pyproject.toml
src/orchestrator/orchestrator/: action.py  alignment.py  audit.py  bus.py  config_handler.py  egress.py  health.py  main.py  metrics.py  push.py  registry.py  reminder_handler.py  retrieval.py  retry.py  scheduler.py  search_handler.py
src/orchestrator/orchestrator/events/: schema.py  taxonomy.py
src/orchestrator/orchestrator/workers/: __init__.py  daily_digest.py  knowledge_maintenance.py
src/orchestrator/tests/: test_action.py  test_action_extended.py  test_alerts.py  test_alignment.py  test_alignment_extended.py  test_audit_and_config.py  test_bus.py  test_bus_extended.py  test_db_roles.py  test_health_handlers.py  test_push.py  test_retrieval.py  test_retrieval_functions.py  test_retrieval_real.py  test_retry.py  test_scheduler_extended.py  test_schema_and_taxonomy.py  test_schema_boundaries.py  test_search_and_reminder.py  test_start_health_server.py  test_v07_actions.py  test_v08_registry.py  test_v09_daily_digest.py  test_v09_knowledge_maintenance.py  test_v09_scheduler.py  test_v10_zone_validation.py  test_v11_egress.py  test_v12_config.py
src/processing/: Dockerfile  pyproject.toml
src/processing/processing/: chunker.py  deletion.py  embedder.py  extractor.py  main.py  metrics.py  pipeline.py  store.py
src/processing/tests/: test_chunker.py  test_deletion.py  test_embedder.py  test_extractor.py  test_main.py  test_pipeline.py  test_pipeline_extended.py  test_store.py
src/query/: Dockerfile  pyproject.toml
src/query/query/: context.py  db.py  handler.py  idempotency.py  llm.py  main.py  memory.py  metrics.py  registry.py  spend.py
src/query/tests/: test_context.py  test_context_extended.py  test_d159_memory_fixes.py  test_handler.py  test_handler_extended.py  test_idempotency.py  test_llm.py  test_memory_and_registry.py  test_self_knowledge_query.py  test_spend_cap.py  test_v07_memory.py  test_v08_registry.py  test_v09_retrieval_tracking.py  test_v12_self_knowledge.py
src/sandboxing/: __init__.py  pyproject.toml  types.py
src/sandboxing/tests/: test_sandboxing_stub.py
src/telegram/: Dockerfile  pyproject.toml
src/telegram/clive_telegram/: auth.py  bot.py  db.py  main.py  metrics.py  minio_client.py  session.py
src/telegram/telegram/: main.py
src/telegram/tests/: test_auth_extended.py  test_bot_commands_extended.py  test_bot_edge_cases.py  test_bot_guard_returns.py  test_bot_handlers.py  test_bot_intent_detection.py  test_main_http.py  test_main_startup.py  test_rendering.py  test_session_and_db.py  test_v03_commands.py  test_v04_commands.py  test_v06_commands.py  test_v07_action_intents.py  test_v08_tool_commands.py  test_v10_auth.py  test_v10_whoami.py
(+78 files in other folders)
