[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clive-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",           # HTTP server for dashboard endpoints
    "asyncpg>=0.29",          # PostgreSQL async driver for session storage
    "httpx>=0.27",            # HTTP client for Block 13 event submission
    "structlog>=24.1",        # Structured logging
    "python-dotenv>=1.0",     # Load /etc/clive/secrets.env
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
