[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clive-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",        # PostgreSQL async driver for audit log writes
    "aiohttp>=3.9",         # HTTP health endpoint
    "pydantic>=2.6",        # Event schema validation
    "structlog>=24.1",      # Structured logging
    "python-dotenv>=1.0",   # Load /etc/clive/secrets.env
    "httpx>=0.27",          # HTTP client for pushing events to Block 8 and Block 23
    "prometheus-client>=0.20",  # Metrics exposition for Block 25 Phase 2 (D-122)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
