[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clive-processing"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",        # PostgreSQL async driver for chunk writes
    "aiohttp>=3.9",         # HTTP server for receiving push from Block 13
    "httpx>=0.27",          # HTTP client for emitting events to Block 13
    "pydantic>=2.6",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "litellm>=1.35",        # Embedding via text-embedding-3-small (D-096)
    "pypdf>=4.0",           # PDF text extraction
    "tiktoken>=0.7",        # Token counting for chunking (D-097)
    "boto3>=1.34",          # MinIO/S3 client for fetching raw documents (D-068)
    "prometheus-client>=0.20",  # Metrics exposition for Block 25 Phase 2 (D-122)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
