[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clive-query"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.35",         # LLM abstraction layer — D-077
    "asyncpg>=0.29",         # PostgreSQL for orchestrator pub/sub
    "pydantic>=2.6",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",           # HTTP client for orchestrator event submission
    "aiohttp>=3.9",          # HTTP server for receiving events from Block 13
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
