[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clive-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",  # Async Telegram bot library
    "httpx>=0.27",                 # HTTP client for Block 13 event submission
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",                # HTTP server for receiving push responses from Block 13
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
