[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clive-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",  # Async Telegram bot library
    "httpx>=0.27",                 # HTTP client for Block 13 event submission
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",                # HTTP server for receiving push responses from Block 13
    "asyncpg>=0.29",               # PostgreSQL async driver for system document activation (D-079)
    "boto3>=1.34",                 # MinIO/S3 client for uploading raw documents (Block 14, D-099)
    "prometheus-client>=0.20",     # Metrics exposition for Block 25 Phase 2 (D-122)
    "python-dateutil>=2.9",        # Reminder time parsing (v0.7, Block 9)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
